--- a/products.html
+++ b/products.html
@@ -263,7 +263,8 @@
 для SIM-лотка </span></p>
                             </div>
                             <div class="card_desc-more card_desc-character">
-                                <p class="show-p">Характеристики:<span>
+                                <div class="show-p">Характеристики:
+                                <p>
 Диагональ дисплея: 5,8'' / 2436х1125 / Super Retina HD (OLED)
 / 16 млн / GSM, 3G (WCDMA/UMTS), 2G (EDGE), 4G (LTE) /
 1 слот для SIM-карты / Nano-SIM / Apple iOS / А11 Bionic /
@@ -271,7 +272,7 @@
 7 Мп / Есть / 802.11 ac / Версия 5.0 / A-GPS, GPS / Есть /
 Lightning / До 21 ч / Есть / Смартфон, адаптер питания,
 кабель USB / Металл, стекло / 143,6 мм / 70,9 мм / 7,7 мм /
-174 г / Серый / 1 год / Китай / Apple</span></p><a href="javascript:void(0);" class="show">Показать полностью</a>
+174 г / Серый / 1 год / Китай / Apple</p></div><a href="javascript:void(0);" class="show">Показать полностью</a>
                             </div>
                         </div></div>
                     </div>
